--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  height: 100%;
+}
+html {
+  height: 100vh;
+  height: -webkit-fill-available;
+}
+
+#__next {
+  height: 100%;
+}
