--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,13 +8,13 @@
   }
 }
 
+/* Removes arrows from input number */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-/* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
 }
