feat: full animation popupselector

--- a/src/components/DayCell/curstomScrollbar.module.css
+++ b/src/components/DayCell/curstomScrollbar.module.css
@@ -1,6 +1,7 @@
 .miniScrollbar::-webkit-scrollbar {
-  display: none;
+  width: 4px;
 }
+
 .miniScrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
