--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,12 +4,17 @@
 
 @layer components {
   .content-container {
-    @apply container mx-auto max-w-4xl px-2 sm:px-4;
+    @apply container mx-auto max-w-4xl px-4;
   }
 
   .customScrollBar::-webkit-scrollbar {
     @apply w-0.5 bg-transparent;
   }
+
+  .customScrollBarBig::-webkit-scrollbar {
+    @apply w-2 bg-transparent;
+  }
+
   .customScrollBar::-webkit-scrollbar-thumb {
     @apply bg-neutral-200 dark:bg-neutral-900;
   }
