feat: data refactors, desktop ui, some graphs

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,11 @@
   }
 }
 
+body {
+  scrollbar-gutter: stable;
+  overflow-y: scroll;
+}
+
 /* Removes arrows from input number */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
