color controls are fine now

--- a/apps/server/app/styles/app.css
+++ b/apps/server/app/styles/app.css
@@ -58,3 +58,51 @@ input[type="number"] {
     --sidebar-ring: theme(colors.neutral.800);
   }
 }
+
+/*
+  This should be in the component file, but when imported to a file it does not appear on initial SSR generation.
+  Can't use tailwind here becuse bg- sets background-color and not background
+*/
+.numberColorSelectorGradient {
+  background: var(--gradLight);
+}
+
+.numberColorSelectorGradient:is(.dark *) {
+  background: var(--gradDark);
+}
+
+.deleteAnimationClass {
+  transform-style: preserve-3d;
+}
+
+.deleteAnimationClass[data-fading="true"]::after {
+  content: "";
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  width: calc(100% + var(--drag-away-fade-size));
+  height: calc(100% + var(--drag-away-fade-size));
+
+  z-index: 5;
+
+  transform: translate(-50%, -50%) translateZ(-10px);
+
+  border-radius: 0.65rem;
+
+  background: conic-gradient(
+    from 0deg,
+    #171717 0%,
+    #171717 var(--drag-away-fade),
+    transparent var(--drag-away-fade),
+    transparent 100%
+  );
+}
+.deleteAnimationClass[data-fading="true"]:is(.dark *)::after {
+  background: conic-gradient(
+    from 0deg,
+    #fafaf9 0%,
+    #fafaf9 var(--drag-away-fade),
+    transparent var(--drag-away-fade),
+    transparent 100%
+  );
+}
